--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,6 +1,16 @@
+platform :ios, '9.0'
 use_frameworks!
+inhibit_all_warnings!
+
 target 'SwiftSyllables_Tests' do
   pod 'SwiftSyllables', :path => '../'
-  
-  
+
+post_install do |installer|
+    installer.pods_project.targets.each do |target|
+        target.build_configurations.each do |config|
+            config.build_settings['SWIFT_VERSION'] = '3.0'
+        end
+    end
+end
+
 end
